Sat Nov  7 14:55:24 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildRidges): Change
	its argument, it is no more an angle in degree, but the dot product
	of normals.

Thu Nov  5 13:23:34 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Fix VTK export,
	the number of triangles cannot be computed from triangle file length.

Mon Nov  2 22:07:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/UNVReader.java: Read UNV elements 92
	(parabolic triangles) and convert them to linear triangles.
	* src/org/jcae/mesh/amibe/util/UNVReader.java: Fix
	NullPointerException when beam elements are listed in group list.

Wed Oct  7 14:16:47 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java: Change
	handling of virtual planes on boundary edges.

Fri Sep  4 11:46:45 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/Remesh.java: New class.

Fri Aug 28 12:15:35 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java:
	Do not check if vertex is mutable in getMatrix3DLocalFrame(),
	this check must be performed by the caller.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3DBg.java: Fix
	handling of nodes on inner boundaries when 'boundaries' option
	is false.

Wed Jul 22 14:07:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New SHARP
	attribute.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Rewrite buildRidges()
	to flag edges with this new attribute instead of creating
	virtual non-manifold edges.  Fix a bug in buildRidges(), angle
	computation was wrong.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3DBg.java: Add an
	option to set a feature angle.
