@@ -704,9 +704,12 @@ public class Remesh
 							h.setAttributes(AbstractHalfEdge.MARKED);
 							continue;
 						}
-						//  Long edges are discretized, but do not create more than 2 subsegments
 						double lcrit = 1.0;
-						if (l > (3.0 - pass))
+						if (l < 2.0)
+							//  Add middle point; otherwise point would be too near from end point
+							lcrit = l / 2.0;
+						else if (l > (3.0 - pass))
+							//  Long edges are discretized, but do not create more than 2 subsegments
 							lcrit = l / (3.0 - pass);
 						//  Ensure that start point has the lowest edge size
 						double [] xs = start.getUV();
