@@ -1,3 +1,11 @@
+Fri Nov 13 16:34:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
+	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: These algorithms
+	were designed to cut edges longer than 2 (in a unit mesh).  But
+	there was a bug, edges smaller than 1+sqrt(2) could not be split,
+	and thus final mesh could contain edges longer than 2.
+
 Sat Nov  7 14:55:24 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildRidges): Change
